syntax = "proto3";

package proto_serialization;

message Rgb
{
	uint32 red = 1;
	uint32 green = 2;
	uint32 blue = 3;
}

message Rgba
{
	uint32 red = 1;
	uint32 green = 2;
	uint32 blue = 3;
	double opacity = 4;
}

message Color
{
    bool is_rgba = 1;
    string name = 2;
    Rgb rgb = 3;
    Rgba rgba = 4;
}

message Point
{
	double x = 1;
	double y = 2;
}