syntax = "proto3";

package proto_serialization;

message RouterSettings
{
	int32 bus_wait_time = 1;
	int32 bus_velocity = 2;
}